--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,8 @@ plugins {
 }
 
 android {
-    compileSdkVersion 34
+//    compileSdkVersion 34
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.posetest"
@@ -24,8 +25,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
         jvmTarget = '1.8'
@@ -56,7 +57,8 @@ dependencies {
     implementation 'com.google.protobuf:protobuf-java:3.19.3'
 
     // CameraX core library
-    def camerax_version = "1.0.0-beta10"
+    def camerax_version = "1.4.0-beta01"
+//    def camerax_version = "1.0.0-beta10"
     implementation "androidx.camera:camera-core:$camerax_version"
     implementation "androidx.camera:camera-camera2:$camerax_version"
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
